# Bonmin

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Dependencies  Externals  INSTALL  Install.html  Intro.html  Makefile.am  Makefile.in  Obtain.html  README  README.md  TODO  appveyor.yml  bib.html  bonmin-uninstalled.pc.in  bonmin.css  bonmin.pc.in  configure  configure.ac  index.html  options_list.html  options_set.html  trunk-B-Hyb.xhtml  use.html
Bonmin/: AUTHORS  Dependencies  INSTALL  Makefile.am  Makefile.in  README  bonmin-uninstalled.pc.in  bonmin.pc.in  configure  configure.ac
Bonmin/doc/: BONMIN_ReferenceManual.hpp  BONMIN_UsersManual.tex  BOUM_Install.tex  BOUM_Intro.tex  BOUM_Obtain.tex  BOUM_options.tex  BOUM_use.tex  Head.tex  Install.tex  Intro.tex  Makefile  Obtain.tex  bib.tex  bonmin.css  bonmin.sty  genHtml.sh  index.html  ltrick.sty  options.tex  options_list.tex  options_list_bonmin_content.tex  options_list_filter_content.tex  options_list_ipopt_content.tex  options_set.tex  options_table.tex  use.tex
Bonmin/doc/html/: Install.html  Intro.html  Obtain.html  bib.html  bonmin.css  options_list.html  options_set.html  use.html
Bonmin/doc/option_pages/: Head.tex  bonmin.sty  genOptionsDocs.sh  ltrick.sty  options_list_bonmin.tex  options_list_bonmin_content.tex  options_list_filter.tex  options_list_ipopt.tex
Bonmin/doxydoc/: doxygen.conf.in
Bonmin/examples/CExample/: Makefile.in  MyBonmin.c  MyBonmin.h  main.c
Bonmin/examples/CppExample/: Makefile.in  MyBonmin.cpp  MyTMINLP.cpp  MyTMINLP.hpp  Mybonmin.opt
Bonmin/examples/OptionDocGen/: DocGen.cpp  Makefile.in  MyTMINLP.cpp  MyTMINLP.hpp
Bonmin/examples/amplExamples/: toy.mod
Bonmin/experimental/Bcp/: BB_cut.cpp  BB_cut.hpp  BM.cpp  BM.hpp  BM.par  BM_lp.cpp  BM_lp_branch.cpp  BM_pack.cpp  BM_scheduler.cpp  BM_scheduler.hpp  BM_tm.cpp  BM_var.hpp  INSTALL  Makefile.am  Makefile.in  ampl_bcp.patch
Bonmin/experimental/FP/: FP.cpp  FP.hpp  Makefile.am  Makefile.in  OAFeasibilityPump.cpp
Bonmin/experimental/NotConvex/: BonCouenne.cpp  BonCouenneCbc.cpp  BonCouenneCbc.hpp  BonCouenneConvexCuts.cpp  BonCouenneConvexCuts.hpp  BonCouenneInfo.cpp  BonCouenneInfo.hpp  BonCouenneInterface.cpp  BonCouenneInterface.hpp  BonCouenneSetup.cpp  BonCouenneSetup.hpp  BonInitHeuristic.cpp  BonInitHeuristic.hpp  BonNlpHeuristic.cpp  BonNlpHeuristic.hpp  CouTight.cpp  Makefile.am  Makefile.in  PietrosFirstFileInCoin  main.cpp
Bonmin/experimental/RobotBonmin/: BonNWayChoose.cpp  BonNWayChoose.hpp  BonNWayObject.cpp  BonNWayObject.hpp  Makefile.am  Makefile.in  Robot-bonmin.cpp  RobotSetup.cpp  RobotSetup.hpp
Bonmin/experimental/Separable/: BonHeuristicInnerApproximation.cpp  BonHeuristicInnerApproximation.hpp  BonOuterDescription.cpp  BonOuterDescription.hpp  Makefile.am  Makefile.in  Sepa.cpp  SepaHeuristicInnerApproximation.cpp  SepaHeuristicInnerApproximation.hpp  SepaSetup.cpp  SepaSetup.hpp  SepaTMINLP2OsiLP.cpp  SepaTMINLP2OsiLP.hpp
Bonmin/inc/: config_bonmin.h.in
Bonmin/src/Algorithms/: BonBabSetupBase.cpp  BonBabSetupBase.hpp  BonBonminSetup.cpp  BonBonminSetup.hpp  BonCbcLpStrategy.hpp  BonCutStorage.cpp  BonCutStorage.hpp  BonSolverHelp.cpp  BonSolverHelp.hpp  BonSubMipSolver.cpp  BonSubMipSolver.hpp  Makefile.am  Makefile.in
Bonmin/src/Apps/: BonMin.cpp  BonNodeSolver.cpp  BonVersions.hpp  IpCbcSosReader.cpp  IpCbcSosReader.hpp  Makefile.am  Makefile.in  OaOriginalFeasibilityPump.cpp  bonmin.cpp  nodeSolver.cpp
Bonmin/src/BonminAmplInterface/: AmplTMINLP.cpp  AmplTMINLP.hpp  BonAmplInterface.cpp  BonAmplInterface.hpp  BonAmplTMINLP.cpp  BonAmplTMINLP.hpp  BonminAmplInterface.cpp  BonminAmplInterface.hpp  Makefile.am  Makefile.in
Bonmin/src/CbcBonmin/: BonAuxInfos.cpp  BonAuxInfos.hpp  BonBabInfos.cpp  BonBabInfos.hpp  BonCbc.cpp  BonCbc.hpp  BonCbc2.cpp  BonCbc2.hpp  BonCbcLpStrategy.cpp  BonCbcLpStrategy.hpp  BonCbcNlpStrategy.cpp  BonCbcNlpStrategy.hpp  BonCbcNode.cpp  BonCbcNode.hpp  BonCbcParam.cpp  BonCbcParam.hpp  BonChooseVariable.cpp  BonChooseVariable.hpp  BonCurvBranching.cpp  BonCurvBranching.hpp  BonDiver.cpp  BonDiver.hpp  BonGuessHeuristic.cpp  BonGuessHeuristic.hpp  BonLpStrongBranching.cpp  BonLpStrongBranching.hpp  BonQPStrongBranching.cpp  BonQPStrongBranching.hpp  BonminCbcLpStrategy.cpp  BonminCbcLpStrategy.hpp  BonminCbcNlpStrategy.cpp  BonminCbcNlpStrategy.hpp  BonminCbcNode.cpp  BonminCbcNode.hpp  BonminCbcParam.cpp  BonminCbcParam.hpp  CbcBonmin.cpp  CbcBonmin.hpp  Makefile.am  Makefile.in  (+2 more)
Bonmin/src/Interfaces/: BonAuxInfos.cpp  BonAuxInfos.hpp  BonBaseOptions.cpp  BonBaseOptions.hpp  BonBasicSetup.cpp  BonBasicSetup.hpp  BonBoundsReader.cpp  BonBoundsReader.hpp  BonBranchingTQP.cpp  BonBranchingTQP.hpp  BonColReader.cpp  BonColReader.hpp  BonCurvatureEstimator.cpp  BonCurvatureEstimator.hpp  BonCutStrengthener.cpp  BonCutStrengthener.hpp  BonExitCodes.hpp  BonFilterSolver.cpp  BonIpoptInteriorWarmStarter.cpp  BonOsiTMINLPInterface.cpp  BonOsiTMINLPInterface.hpp  BonRegisteredOptions.cpp  BonRegisteredOptions.hpp  BonStartPointReader.hpp  BonStdCInterface.cpp  BonStdCInterface.h  BonStdInterfaceTMINLP.cpp  BonStdInterfaceTMINLP.hpp  BonTMINLP.cpp  (+19 more)
Bonmin/test/: .cvsignore  InterfaceTest.cpp  Makefile.am  Makefile.in  bonmin.opt
Couenne/: AUTHORS  Makefile.am  Makefile.in  README  TODO  configure  configure.ac  couenne.opt.base
Couenne/inc/: config_couenne.h.in
Couenne/src/: Makefile.am  Makefile.in
Couenne/test/: Makefile.am  Makefile.in
experimental/Separable/: BonHeuristicInnerApproximation.cpp  BonHeuristicInnerApproximation.hpp  BonOuterDescription.cpp  Makefile.am  Makefile.in  Sepa.cpp  SepaHeuristicInnerApproximation.cpp  SepaHeuristicInnerApproximation.hpp  SepaSetup.hpp  SepaTMINLP2OsiLP.hpp
src/Algorithms/: BonBabSetupBase.cpp  BonBabSetupBase.hpp  BonBonminSetup.cpp  BonBonminSetup.hpp  BonCbcLpStrategy.cpp  BonSubMipSolver.cpp  Makefile.am  Makefile.in
src/Apps/: BonNodeSolver.cpp  Makefile.am  Makefile.in
test/: InterfaceTest.cpp  Makefile.am  Makefile.in  bonmin.opt
test/fun/: clp-try.cpp  testconv.cpp  testeval.cpp
(+1331 files in other folders)
